# Rust

./: README.md
todo/: Cargo.toml  README.md  tasks.txt
todo/src/: headers.rs  main.rs
word_game/: Cargo.toml
word_game/src/: constants.rs  game.rs  main.rs  player.rs  utils.rs
