[package]
name = "word_guesser"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "word_guesser"
path = "src/main.rs"

[dependencies]
termion = "2.0"
thiserror = "1.0"
rand = { version = "0.8", optional = true }

[features]
default = ["random_word"]
random_word = ["rand"]
